--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -349,7 +349,7 @@
             flex-direction: column;
             gap: 20px;
             justify-content: center;
-            align-items: center;
+            // align-items: center;
 
             .complete_bottom {
                 display: flex;
